# libdfs

./: .gitignore  CMakeLists.txt  README.md
cmake/: dfs-config.cmake.in  dfs-functions.cmake
codegen/: CMakeLists.txt  codegen.cpp
dfs/: ABI.cpp  ABI.h  Bitfield.cpp  Bitfield.h  CMakeLists.txt  Compound.cpp  Compound.h  CompoundReader.h  Container.cpp  Container.h  Enum.cpp  Enum.h  ItemReader.h  LinuxProcess.cpp  LinuxProcess.h  LinuxProcessCommon.cpp  LinuxProcessCommon.h  MemoryLayout.cpp  MemoryLayout.h  Path.cpp  Path.h  Pointer.h  PolymorphicReader.h  Process.cpp  Process.h  Reader.cpp  Reader.h  Structures.cpp  Structures.h  Type.cpp  Type.h  Win32Process.cpp  Win32Process.h  WineProcess.cpp  WineProcess.h  overloaded.h
dfs/linux/: proc_utils.h
doc/: Doxyfile.in  codegen.md  mainpage.md  readers.md
tests_and_examples/: CMakeLists.txt  reader.cpp  structcheck.cpp  test-structures.cpp
